chore: auto sync to npmmirror when published

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postbuild": "tsc",
     "preview": "vite preview",
     "prepublishOnly": "npm run build",
+    "postpublish": "npm-mirror-sync",
     "ncu": "npx npm-check-updates -u",
     "postncu": "npm i"
   },
@@ -50,6 +51,7 @@
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
     "npm-check-updates": "^16.13.2",
+    "npm-mirror-sync": "^1.0.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
