--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,6 +9,8 @@
           { "type": "refactor", "release": "patch" },
           { "type": "docs", "release": "patch" },
           { "type": "chore", "release": false },
+          { "type": "chore", "scope": "dev-deps", "release": false },
+          { "type": "chore", "release": "patch" },
           { "scope": "no-release", "release": false }
         ]
       }
