chore(no-release): fix chore scope

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,7 +9,7 @@
           { "type": "refactor", "release": "patch" },
           { "type": "docs", "release": "patch" },
           { "type": "chore", "release": false },
-          { "type": "chore", "scope": "dev-deps", "release": false },
+          { "type": "chore", "scope": "deps-dev", "release": false },
           { "type": "chore", "release": "patch" },
           { "scope": "no-release", "release": false }
         ]
