--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,9 +8,8 @@
         "releaseRules": [
           { "type": "refactor", "release": "patch" },
           { "type": "docs", "release": "patch" },
+          { "type": "chore", "scope": "deps", "release": "patch" },
           { "type": "chore", "release": false },
-          { "type": "chore", "scope": "deps-dev", "release": false },
-          { "type": "chore", "release": "patch" },
           { "scope": "no-release", "release": false }
         ]
       }
